@startuml
title SO DO LOP 3 TANG - LAP BIEN BAN BAN GIAO

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

'=====================
' TANG GIAO DIEN
'=====================
package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHLapBienBanBanGiao #BFE8BA {
    - txtTimKiem: TextBox
    - grvDSHopDongChoBanGiao: GridView
    - lblThongTinHopDong: Label
    - grvTaiSanBanGiao: GridView
    - txtSoLuongThucTe: TextBox
    - cbTinhTrang: ComboBox
    - txtGhiChu: TextBox
    - btnChotBanGiao: Button
    - btnHuyBanGiao: Button
    --
    + hienThiForm()
    + nhapTuKhoaTimKiem(tuKhoa: String)
    + chonHopDong(maHD: String)
    + nhapSoLuongVaTinhTrang()
    + btnChotBanGiao_Click()
    + btnHuyBanGiao_Click()
    + hienThiThongBaoHuy()
  }
}

'=====================
' TANG NGHIEP VU
'=====================
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class LapBienBanBanGiao #F4E3A2 {
    + LayDanhSachChoBanGiao(tuKhoa: String): IReadOnlyList<HopDongChoBanGiao>
    + LayChiTietBanGiao(maHD: String): ChiTietBanGiao
    + ChotBienBan(maHD: String, maNV: String, taiSan: IReadOnlyList<TaiSanBanGiaoInput>): BienBanGiaoNhan
  }

  class HopDong #F4E3A2 {
    - MaHD: String
    - NgayKy: DateTime?
    - NgayBatDau: DateTime
    - NgayKetThuc: DateTime
    - KyThanhToan: int?
    - GiaThue: decimal
    - TrangThai: String
    - MaNV: String
    - MaPhieuCoc: String
    - TienCoc: decimal
    --
    + KiemTraChoBanGiao()
    + LayDanhSachChoBanGiao(tuKhoa: String): IReadOnlyList<HopDongChoBanGiao>
    + DocChiTiet(maHD: String): HopDong
    + ChuyenTrangThaiDangHieuLuc()
  }

  class BienBanGiaoNhan #F4E3A2 {
    - MaBienBan: String
    - NgayBanGiao: DateTime
    - LoaiBienBan: String
    - MaHD: String
    - MaNV: String
    --
    + KhoiTaoBanGiao(maHD: String, maNV: String, ngayBanGiao: DateTime, chiTiet: IEnumerable<ChiTietGiaoNhan>): BienBanGiaoNhan
    + KiemTraDuLieuTaiSan()
    + TonTaiBanGiaoTheoHD(maHD: String): Boolean
    + LuuBienBan()
  }

  class ChiTietGiaoNhan #F4E3A2 {
    - MaBienBan: String
    - MaTS: String
    - TinhTrang: String
    - SoLuong: int
    - GhiChu: String
    - SoLuongTieuChuan: int
    --
    + KiemTraHopLe()
    + ThemNhieu(chiTiet: IEnumerable<ChiTietGiaoNhan>)
  }

  class PhongTaiSan #F4E3A2 {
    - MaPhong: String
    - MaTS: String
    - SoLuongTieuChuan: int
    --
    + LayTaiSanTheoPhong(maPhong: String): IReadOnlyList<PhongTaiSan>
  }

  class Giuong #F4E3A2 {
    - MaGiuong: String
    - TrangThai: String
    --
    + CapNhatDangSuDungTheoHD(maHD: String)
  }
}

'=====================
' TANG TRUY CAP DU LIEU
'=====================
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class HopDongDB #BFDCF0 {
    + LayDanhSachChoBanGiao(tuKhoa: String): IReadOnlyList<HopDongChoBanGiao>
    + DocChiTiet(maHD: String): HopDong
    + UpdateTrangThai(maHD: String, trangThai: String): Boolean
  }

  class BienBanGiaoNhanDB #BFDCF0 {
    + Them(bienBan: BienBanGiaoNhan)
    + TonTaiBanGiaoTheoHD(maHD: String): Boolean
  }

  class ChiTietGiaoNhanDB #BFDCF0 {
    + ThemNhieu(chiTiet: IEnumerable<ChiTietGiaoNhan>)
  }

  class PhongTaiSanDB #BFDCF0 {
    + LayTaiSanTheoPhong(maPhong: String): IReadOnlyList<PhongTaiSan>
  }

  class GiuongDB #BFDCF0 {
    + UpdateTrangThaiTheoHopDong(maHD: String, trangThai: String)
  }
}

'=====================
' QUAN HỆ (ASSOCIATIONS)
'=====================
MHLapBienBanBanGiao o-- LapBienBanBanGiao

LapBienBanBanGiao o-- HopDong
LapBienBanBanGiao o-- BienBanGiaoNhan
LapBienBanBanGiao o-- ChiTietGiaoNhan
LapBienBanBanGiao o-- PhongTaiSan
LapBienBanBanGiao o-- Giuong

HopDong o-- HopDongDB
BienBanGiaoNhan o-- BienBanGiaoNhanDB
ChiTietGiaoNhan o-- ChiTietGiaoNhanDB
PhongTaiSan o-- PhongTaiSanDB
Giuong o-- GiuongDB


GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
LapBienBanBanGiao -[hidden]down- HopDongDB
Giuong -[hidden]down- HopDongDB
@enduml
